fixed white space in style sheet

--- a/styles.css
+++ b/styles.css
@@ -126,11 +126,6 @@ button {
   border-right: solid 3px rgba(0, 0, 0, 0);
 }
 
-/* .bar {
-  display: flex;
-  justify-content: center;
-} */
-
 progress {
   border-radius: 2px;
   width: 98%;
